[tool.poetry]
name = "jcutil"
version = "1.0.0"
description = "a util tools"
authors = ["Jochen.He <thjl@hotmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
jcramda = "^1.0.5"
aiohttp = "^3.7.4"
pymongo = "^3.12.0"
PyYAML = "^5.4.1"
python-consul = "^1.1.0"
pycryptodomex = "^3.10.1"
APScheduler = "^3.7.0"
python-redis = "^0.2.2"
colorama = "^0.4.4"

[tool.poetry.dev-dependencies]
SQLAlchemy = "^1.4.22"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
